--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,3 @@
 PORT= 8000
-MONGO_URI=mongodb+srv://echri:72456126@cluster0.fd1jl.mongodb.net/echri?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://echri:72456126@cluster0.fd1jl.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+secretOrPrivateKey = secretOrPrivateKey
