--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "concurrently": "^6.5.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
     "passport": "^0.5.2",
